Dodanie odnośnika do poradnika LaTeX i usprawnienie UI

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,8 +67,15 @@
             padding: 1em;
             margin-top: 2em;
         }
+
+        a:hover,
+        btn:hover {
+            opacity: 0.9;
+        }
     </style>
     <h1>Pracownia Fizyczna go nienawidzi [ZOBACZ JAK]</h1>
+   <p><a href="https://latexeditor.lagrida.com/" target="_blank" style="color: inherit;">Edytor LaTeX online</a>
+    </p>
 
     <form method="post">
         <label>Symbol funkcji:</label>
